--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,8 @@
   ],
   "minimum-stability": "stable",
   "require": {
-    "php": "^7.4",
-    "sbooker/transaction-manager": "^1.0"
+    "php": "^7.4 || ^8.0",
+    "sbooker/transaction-manager": "^2.0"
   },
   "require-dev": {
     "phpunit/phpunit": "^9.0"
@@ -28,7 +28,7 @@
   },
   "autoload-dev": {
     "psr-4": {
-      "Tests\\Sbooker\\PersistentSequences\\": "tests/"
+      "Sbooker\\PersistentSequences\\Tests\\": "tests/"
     }
   }
 }
